WIP: team endpoints and little refactor
