# docs/swagger.yaml
@@ -1,4 +1,24 @@
 definitions:
+  piyo-engine_api_v1.CreateTeamRequest:
+    properties:
+      desc:
+        type: string
+      name:
+        example: PMR Fansub
+        maxLength: 20
+        minLength: 3
+        type: string
+      qq_group_id:
+        type: string
+      team_id:
+        example: pmr
+        maxLength: 20
+        minLength: 3
+        type: string
+    required:
+    - name
+    - team_id
+    type: object
   piyo-engine_api_v1.GetProfileResponse:
     properties:
       code:
@@ -10,14 +30,36 @@ definitions:
     type: object
   piyo-engine_api_v1.GetProfileResponseData:
     properties:
-      createdAt:
+      created_at:
         type: string
       nickname:
         example: alan
         type: string
-      userId:
+      user_id:
         type: string
       username:
+        type: string
+    type: object
+  piyo-engine_api_v1.GetTeamMembersResponseData:
+    properties:
+      members:
+        items:
+          $ref: '#/definitions/piyo-engine_api_v1.TeamMemberProfile'
+        type: array
+    type: object
+  piyo-engine_api_v1.GetTeamProfileResponseData:
+    properties:
+      created_at:
+        type: string
+      desc:
+        type: string
+      name:
+        type: string
+      qq_group_id:
+        type: string
+      status:
+        type: integer
+      team_id:
         type: string
     type: object
   piyo-engine_api_v1.LoginRequest:
@@ -46,7 +88,7 @@ definitions:
     type: object
   piyo-engine_api_v1.LoginResponseData:
     properties:
-      accessToken:
+      access_token:
         type: string
     type: object
   piyo-engine_api_v1.RegisterRequest:
@@ -60,6 +102,7 @@ definitions:
       username:
         example: foo
         maxLength: 30
+        minLength: 3
         type: string
     required:
     - email
@@ -72,6 +115,20 @@ definitions:
         type: integer
       data: {}
       message:
+        type: string
+    type: object
+  piyo-engine_api_v1.TeamMemberProfile:
+    properties:
+      created_at:
+        type: string
+      joined_at:
+        type: string
+      nickname:
+        example: alan
+        type: string
+      user_id:
+        type: string
+      username:
         type: string
     type: object
   piyo-engine_api_v1.UpdateProfileRequest:
@@ -97,7 +154,7 @@ info:
   title: Piyo Engine API
   version: 1.0.0
 paths:
-  /login:
+  /team:
     post:
       consumes:
       - application/json
@@ -107,28 +164,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/piyo-engine_api_v1.LoginRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/piyo-engine_api_v1.LoginResponse'
-      summary: 账号登录
-      tags:
-      - 用户模块
-  /register:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: params
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/piyo-engine_api_v1.RegisterRequest'
+          $ref: '#/definitions/piyo-engine_api_v1.CreateTeamRequest'
       produces:
       - application/json
       responses:
@@ -136,9 +172,49 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/piyo-engine_api_v1.Response'
-      summary: 用户注册
+      summary: 新建团队
       tags:
-      - 用户模块
+      - 团队模块
+  /team/{team_id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Team ID
+        in: path
+        name: team_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/piyo-engine_api_v1.GetTeamProfileResponseData'
+      summary: 获取团队信息
+      tags:
+      - 团队模块
+  /team/{team_id}/members:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Team ID
+        in: path
+        name: team_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/piyo-engine_api_v1.GetTeamMembersResponseData'
+      summary: 获取团队成员列表
+      tags:
+      - 团队模块
   /user:
     get:
       consumes:
@@ -175,6 +251,48 @@ paths:
       security:
       - Bearer: []
       summary: 修改用户信息
+      tags:
+      - 用户模块
+  /user/login:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/piyo-engine_api_v1.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/piyo-engine_api_v1.LoginResponse'
+      summary: 账号登录
+      tags:
+      - 用户模块
+  /user/register:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/piyo-engine_api_v1.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/piyo-engine_api_v1.Response'
+      summary: 用户注册
       tags:
       - 用户模块
 securityDefinitions:
