# internal/model/user.go
@@ -6,14 +6,15 @@ import (
 
 type User struct {
 	gorm.Model
-	UserID    string `gorm:"unique;not null"`
-	Username  string `gorm:"unique;not null"`
-	Nickname  string `gorm:"not null"`
-	Password  string `gorm:"not null"`
-	Email     string `gorm:"unique;not null"`
-	AvatarUrl string `gorm:"not null"`
-	Status    int    `gorm:"not null"`
-	Teams     []Team `gorm:"many2many:user_team_role;"`
+	UserID      string `gorm:"unique;not null"`
+	Username    string `gorm:"unique;not null"`
+	Nickname    string `gorm:"not null"`
+	Password    string `gorm:"not null"`
+	Email       string `gorm:"unique;not null"`
+	AvatarUrl   string `gorm:"not null"`
+	Status      int    `gorm:"not null"`
+	Teams       []Team `gorm:"many2many:user_team_role;"`
+	SystemRoles []UserSystemRole
 }
 
 func (u *User) TableName() string {
