# internal/server/http.go
@@ -31,7 +31,13 @@ func NewHTTPServer(
 
 	// swagger doc
 	docs.SwaggerInfo.BasePath = "/v1"
-	s.GET(
+	setupRouter(logger, s, jwt, userHandler, teamHandler)
+
+	return s
+}
+
+func setupRouter(logger *log.Logger, server *http.Server, jwt *jwt.JWT, userHandler *handler.UserHandler, teamHandler *handler.TeamHandler) {
+	server.GET(
 		"/swagger/*any", ginSwagger.WrapHandler(
 			swaggerfiles.Handler,
 			// ginSwagger.URL(fmt.Sprintf("http://localhost:%d/swagger/doc.json", conf.GetInt("app.http.port"))),
@@ -40,13 +46,15 @@ func NewHTTPServer(
 		),
 	)
 
-	s.Use(
+	server.Use(
 		middleware.CORSMiddleware(),
 		middleware.ResponseLogMiddleware(logger),
 		middleware.RequestLogMiddleware(logger),
 		// middleware.SignMiddleware(log),
 	)
-	s.GET(
+
+	// Health routes
+	server.GET(
 		"/", func(ctx *gin.Context) {
 			logger.WithContext(ctx).Info("hello")
 			apiV1.HandleSuccess(
@@ -57,32 +65,38 @@ func NewHTTPServer(
 		},
 	)
 
-	v1 := s.Group("/v1")
+	// API v1 routes
+	v1 := server.Group("/v1")
 	{
-		// No route group has permission
-		noAuthRouter := v1.Group("/")
-		{
-			noAuthRouter.POST("/register", userHandler.Register)
-			noAuthRouter.POST("/login", userHandler.Login)
-		}
-		// Non-strict permission routing group
-		noStrictAuthRouter := v1.Group("/").Use(middleware.NoStrictAuth(jwt, logger))
-		{
-			noStrictAuthRouter.GET("/user", userHandler.GetProfile)
-		}
+		setupUserRoutes(logger, v1.Group("user"), jwt, userHandler)
+		setupTeamRoutes(logger, v1.Group("team"), jwt, teamHandler)
+	}
+}
 
-		// Strict permission routing group
-		strictAuthRouter := v1.Group("/").Use(middleware.StrictAuth(jwt, logger))
-		{
-			strictAuthRouter.PUT("/user", userHandler.UpdateProfile)
-		}
-
-		// TODO: Struct role permission routing group
-		strictRoleAuthRouter := v1.Group("/").Use(middleware.StrictAuth(jwt, logger))
-		{
-			strictRoleAuthRouter.POST("/team", teamHandler.CreateTeam)
-		}
+func setupUserRoutes(logger *log.Logger, r *gin.RouterGroup, jwt *jwt.JWT, userHandler *handler.UserHandler) {
+	noAuthRouter := r.Group("/")
+	{
+		noAuthRouter.POST("/register", userHandler.Register)
+		noAuthRouter.POST("/login", userHandler.Login)
+	}
+	// Non-strict permission routing group
+	noStrictAuthRouter := r.Use(middleware.NoStrictAuth(jwt, logger))
+	{
+		noStrictAuthRouter.GET("/", userHandler.GetProfile)
 	}
 
-	return s
+	// Strict permission routing group
+	strictAuthRouter := r.Use(middleware.StrictAuth(jwt, logger))
+	{
+		strictAuthRouter.PUT("/", userHandler.UpdateProfile)
+	}
+}
+
+func setupTeamRoutes(logger *log.Logger, r *gin.RouterGroup, jwt *jwt.JWT, teamHandler *handler.TeamHandler) {
+	strictRoleAuthRouter := r.Group("/").Use(middleware.StrictAuth(jwt, logger))
+	{
+		strictRoleAuthRouter.POST("/team", teamHandler.CreateTeam)
+		strictRoleAuthRouter.GET("/team/:team_id", teamHandler.GetTeamProfile)
+		strictRoleAuthRouter.GET("/team/:team_id/members", teamHandler.GetTeamMembers)
+	}
 }
